stylesheets/aid_by_AID.css
html{
  display: flex;
  height: inherit;
  min-height: 100%;
  /* text-align: left; */
  /* margin-left: inherit;
  margin-right: inherit; */
}

.instructions{
  text-align: left;
}


.header{
  -moz-box-shadow: 14px 10px 41px 3px #cd863f;
	-webkit-box-shadow: 14px 10px 41px 3px #cd863f;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  margin: auto;
}

.myButton {
  margin-left: 20px;
  margin-right: 20px;
  height: 20px;
	-moz-box-shadow: 14px 10px 41px 3px #cd863f;
	-webkit-box-shadow: 14px 10px 41px 3px #cd863f;
	box-shadow: 14px 10px 41px 3px #cd863f;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fff8dc), color-stop(1, #ffebcd));
	background:-moz-linear-gradient(top, #fff8dc 5%, #ffebcd 100%);
	background:-webkit-linear-gradient(top, #fff8dc 5%, #ffebcd 100%);
	background:-o-linear-gradient(top, #fff8dc 5%, #ffebcd 100%);
	background:-ms-linear-gradient(top, #fff8dc 5%, #ffebcd 100%);
	background:linear-gradient(to bottom, #fff8dc 5%, #ffebcd 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff8dc', endColorstr='#ffebcd',GradientType=0);
	background-color:#fff8dc;
	-moz-border-radius:20px;
	-webkit-border-radius:20px;
	border-radius:20px;
	border:2px solid #ffffff;
	display: inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Trebuchet MS;
	font-size:18px;
	font-weight:bold;
	padding:10px 18px;
	text-decoration:none;
	text-shadow:2px 3px 50px #cd863f;
}
.myButton:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffebcd), color-stop(1, #fff8dc));
	background:-moz-linear-gradient(top, #ffebcd 5%, #fff8dc 100%);
	background:-webkit-linear-gradient(top, #ffebcd 5%, #fff8dc 100%);
	background:-o-linear-gradient(top, #ffebcd 5%, #fff8dc 100%);
	background:-ms-linear-gradient(top, #ffebcd 5%, #fff8dc 100%);
	background:linear-gradient(to bottom, #ffebcd 5%, #fff8dc 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebcd', endColorstr='#fff8dc',GradientType=0);
	background-color:#ffebcd;
}
.myButton:active {
	position:relative;
	top:1px;
}


h1 {
  color: peru;
  font-family: "Century Gothic","CenturyGothic","AppleGothic",sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: 300;
  text-align: center;
  }

p {
  margin: 40px;
  }

form{
  margin: 40px;
  }

input[type=text], select, textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid peru;
  border-radius: 4px;
  resize: vertical;
  }

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
  white-space: nowrap;
  }

input[type=submit] {
  background-color: peru;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
  }

input[type=submit]:hover {
  background-color: lightgreen;
  }

.container {
  border-radius: 5px;
  padding: 2px;
  border: 2px solid white;
  -moz-box-shadow: 14px 10px 41px 3px #cd863f;
  -webkit-box-shadow: 14px 10px 41px 3px #cd863f;
  min-height:600px;
  margin: 40px;

  }

#profile_name {
  display: flex;
  flex-direction: row-reverse;
}

.row{
  margin: 40px;
}

.flex-student-name {
  display: flex;
  width: 100%;
}

.flex-student-budget {
  display: flex;
  width: 100%;
}

.flex-student-rows1 {
  display: flex;
  flex-direction: row-reverse;
}

.flex-student-rows {
  display: flex;
  flex-direction: row;
}

.col-25 {
  float: left;
  width: 25%;
  margin-top: 6px;
  }

.col-75 {
  float: left;
  width: 75%;
  margin-top: 6px;
  }

.row:after {
  content: "";
  display: table;
  clear: both;
  }

/* Responsive layout - when the screen is less than 1200px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 1200px) {
  .col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
 }
 @media screen and (max-width: 1220px) {
  .myButton, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
 }

button{
    background-color: peru;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    float: right;
    }
    hover {
    background-color: lightgreen;
    }}

.isInBudget {
  background-color: rgba(0, 128, 0, .2);
  }

.isNotInBudget{
  background-color: rgba(255, 0, 0, 0.4);
 }

 table{
   width:100%;
   table-layout: auto;
 }

 .tbl-header{
   background-color: tan;
   -moz-box-shadow: 14px 10px 41px 3px #cd863f;
   -webkit-box-shadow: 14px 10px 41px 3px #cd863f;
   width:100%;
  }

 .tbl-content{
   width: 100%;
   height:500px;
   overflow-x:auto;
   margin-top: 0px;
   border: 3px solid tan;
   -moz-box-shadow: 14px 10px 41px 3px #cd863f;
   -webkit-box-shadow: 14px 10px 41px 3px #cd863f;
 }

 th{
   padding: 20px 15px;
   text-align: center;
   font-weight: 500;
   font-size: 12px;
   color: white;
   text-transform: uppercase;
 }

 td{
   padding: 15px;
   text-align: center;
   vertical-align: middle;
   font-weight: 300;
   font-size: 12px;
   color: peru;
   border-bottom: solid 20px wheat;

 }
 .schoolname
  {text-transform: uppercase;}


 /* demo styles for background*/
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);

 body{
   color:peru;
   text-align: center;
   font-family: "Century Gothic","CenturyGothic","AppleGothic",sans-serif;
   margin: auto;
   margin-top: 60px;
   background: -webkit-linear-gradient(left, white, Cornsilk);
   background: linear-gradient(to bottom, white, wheat);
   width: 90%;
 }

 section{
   margin: 50px;
 }

 /* add scrollbar*/
 ::-webkit-scrollbar {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 ::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }

 .scroll{
   height: 600px;
   overflow-y: scroll;
 }

 .wholpage{
   margin: auto;
   text-align: center;
 }

